# SWSHplotting

./: LICENSE  README.md  README.rst  pyproject.toml  setup.py
src/: SWSHplotting.py
